[tool.poetry]
name = "advent-2023-python"
version = "0.1.0"
description = ""
authors = ["b-van-b <115096508+b-van-b@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
